--- a/theia-go-docker/Dockerfile
+++ b/theia-go-docker/Dockerfile
@@ -27,7 +27,7 @@ RUN adduser --disabled-password --gecos '' theia && \
     chown -R theia:theia /home/go-tools;
 USER theia
 
-ENV GO_VERSION=1.12 \
+ENV GO_VERSION=1.14 \
     GOOS=linux \
     GOARCH=amd64 \
     GOROOT=/home/go \
@@ -35,35 +35,36 @@ ENV GO_VERSION=1.12 \
 ENV PATH=$GOPATH/bin:$GOROOT/bin:$PATH
 
 # install Go
-RUN curl -fsSL https://storage.googleapis.com/golang/go$GO_VERSION.$GOOS-$GOARCH.tar.gz | tar -C /home -xzv && \
-    # install VS Code Go tools: https://github.com/Microsoft/vscode-go/blob/058eccf17f1b0eebd607581591828531d768b98e/src/goInstallTools.ts#L19-L45
-    go get -u -v \
-    github.com/mdempsky/gocode \
-    github.com/uudashr/gopkgs/cmd/gopkgs \
-    github.com/ramya-rao-a/go-outline \
-    github.com/acroca/go-symbols \
-    golang.org/x/tools/cmd/guru \
-    golang.org/x/tools/cmd/gorename \
-    github.com/fatih/gomodifytags \
-    github.com/haya14busa/goplay/cmd/goplay \
-    github.com/josharian/impl \
-    github.com/tylerb/gotype-live \
-    github.com/rogpeppe/godef \
-    github.com/zmb3/gogetdoc \
-    golang.org/x/tools/cmd/goimports \
-    github.com/sqs/goreturns \
-    winterdrache.de/goformat/goformat \
-    golang.org/x/lint/golint \
-    github.com/cweill/gotests/... \
-    github.com/alecthomas/gometalinter \
-    honnef.co/go/tools/... \
-    github.com/golangci/golangci-lint/cmd/golangci-lint \
-    github.com/mgechev/revive \
-    github.com/sourcegraph/go-langserver \
-    github.com/go-delve/delve/cmd/dlv \
-    github.com/davidrjenni/reftools/cmd/fillstruct \
-    github.com/godoctor/godoctor && \
-    go get -u -v -d github.com/stamblerre/gocode && \
+RUN curl -fsSL https://storage.googleapis.com/golang/go$GO_VERSION.$GOOS-$GOARCH.tar.gz | tar -C /home -xzv
+
+# install VS Code Go tools: https://github.com/Microsoft/vscode-go/blob/058eccf17f1b0eebd607581591828531d768b98e/src/goInstallTools.ts#L19-L45
+RUN go get -u -v github.com/mdempsky/gocode
+RUN go get -u -v github.com/uudashr/gopkgs/cmd/gopkgs
+RUN go get -u -v github.com/ramya-rao-a/go-outline
+RUN go get -u -v github.com/acroca/go-symbols
+RUN go get -u -v golang.org/x/tools/cmd/guru
+RUN go get -u -v golang.org/x/tools/cmd/gorename
+RUN go get -u -v github.com/fatih/gomodifytags
+RUN go get -u -v github.com/haya14busa/goplay/cmd/goplay
+RUN go get -u -v github.com/josharian/impl
+RUN go get -u -v github.com/tylerb/gotype-live
+RUN go get -u -v github.com/rogpeppe/godef
+RUN go get -u -v github.com/zmb3/gogetdoc
+RUN go get -u -v golang.org/x/tools/cmd/goimports
+RUN go get -u -v github.com/sqs/goreturns
+RUN go get -u -v winterdrache.de/goformat/goformat
+RUN go get -u -v golang.org/x/lint/golint
+RUN go get -u -v github.com/cweill/gotests/...
+RUN go get -u -v github.com/alecthomas/gometalinter
+RUN go get -u -v honnef.co/go/tools/...
+RUN go get -u -v github.com/golangci/golangci-lint/cmd/golangci-lint
+RUN go get -u -v github.com/mgechev/revive
+RUN go get -u -v github.com/sourcegraph/go-langserver
+RUN go get -u -v github.com/go-delve/delve/cmd/dlv
+RUN go get -u -v github.com/davidrjenni/reftools/cmd/fillstruct
+RUN go get -u -v github.com/godoctor/godoctor
+
+RUN go get -u -v -d github.com/stamblerre/gocode && \
     go build -o $GOPATH/bin/gocode-gomod github.com/stamblerre/gocode && \
     rm -rf $GOPATH/src && \
     rm -rf $GOPATH/pkg
